# ai-daily-2026-02-07-prompt-guard-lab

./: .env.example  .gitignore  .title  Makefile  PRD.md  README.md  SOURCES.json  pyproject.toml
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/routes/: guard.py
app/core/: __init__.py  config.py  logging.py
app/schemas/: guard.py
app/service_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/services/: __init__.py  guard.py
app/web/: app_factory.py  streamlit_app.py
docs/: ARCHITECTURE.md  PROJECT_TYPES.md
scripts/: dev_api.sh  dev_ui.sh  fmt_lint.sh  run_tests.sh
tests/: test_guard.py  test_health.py
